gitops/apps/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    name: auth
    app.kubernetes.io/name: authentik
